--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=wefit-desafio-backend
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+
+# Mostrar SQL gerado
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# DDL auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
